test/zinc_source/compile_errors/concurrency/09_receive_non_channel_expr.zn
// expected-error: channel receive expects a channel expression

fn main() {
    value = 1
    received = <-value
    print("{received}")
}
